--- a/01-CSS/CSS-Positioning/homework/homework.css
+++ b/01-CSS/CSS-Positioning/homework/homework.css
@@ -42,7 +42,7 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 #ejercicioCinco {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 }
 
